# simple-brain

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
.claude/agents/: brain_memory_agent.md
.gemini/agents/: brain_memory_agent.md  memory.md  memory_curator.md
.gemini/skills/brain-memory/: SKILL.md
.gemini/skills/memory/: SKILL.md
.gemini/skills/memory-curator/: SKILL.md
brain/: __init__.py  cli.py  config.py  gui.py  index.py  search.py  summarizer.py  vault.py
tests/: test_advanced_edge_case.py  test_cli.py  test_complex_memory.py  test_gui_smoke.py  test_search.py
