[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-brain"
version = "0.1.0"
description = "A personal knowledge base CLI — pure BM25 search over markdown, no embeddings."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["knowledge-base", "notes", "cli", "brain", "fts5", "bm25", "memory"]

dependencies = [
    "typer>=0.12",
    "rich>=13",
    "python-frontmatter>=1.1",
    "platformdirs>=4",
]

[project.scripts]
brain = "brain.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["brain"]

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.21.0",
    "pytest>=8",
    "ruff>=0.4",
]
